added detail on page

--- a/CertificationPkg/Data/SysModuleEdit_IteSwimmingProgram/Localization/data.ru-RU.json
+++ b/CertificationPkg/Data/SysModuleEdit_IteSwimmingProgram/Localization/data.ru-RU.json
@@ -15,7 +15,7 @@
         {
           "SchemaColumnUId": "55132174-2b96-4e0a-830c-b8e952b12c45",
           "ColumnName": "PageCaption",
-          "Value": "Страница редактирования: \"Программы плавания\""
+          "Value": ""
         }
       ]
     }
